# LithoApp

./: .env.example  .gitignore  LICENSE  README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.singlefile.config.ts
.github/workflows/: deploy.yml
litho-engine-wasm/: Cargo.toml
litho-engine-wasm/src/: color_science.rs  hanger.rs  heightmap.rs  indices.rs  lib.rs  mesh.rs  normals.rs  palette.rs  stl.rs  types.rs
public/: manifest.json  sw.js
src/: App.tsx  index.css  main.tsx  wasm
src/components/: AmsConfigurator.tsx  BootSplash.tsx  CropOverlay.tsx  ErrorBoundary.tsx  ExportBar.tsx  FilamentManager.tsx  HeatmapMaterial.tsx  ImageEditor.tsx  InstallBanner.tsx  LanguageSelector.tsx  LithoPreview.tsx  MobileLayout.tsx  MobileNavBar.tsx  MobileSettingsMenu.tsx  PostFX.tsx  ProjectGallery.tsx  Scene.tsx  TouchSlider.tsx  TranslucentMaterial.tsx  UpdateToast.tsx  VersionBadge.tsx  ViewportOverlay.tsx
src/data/: defaultFilaments.ts
src/hooks/: useInstallPrompt.ts  useUpdateCheck.ts
src/i18n/: index.ts
src/lib/: haptics.ts  imageProcessor.ts
src/models/: filamentPalette.test.ts  filamentPalette.ts
src/store/: useAppStore.test.ts  useAppStore.ts  useCropStore.ts  useHistoryStore.test.ts  useHistoryStore.ts  usePaletteStore.ts  useProjectStore.test.ts  useProjectStore.ts
src/utils/: colorProfile.test.ts  colorProfile.ts  colorScience.test.ts  colorScience.ts  objEncoder.test.ts  objEncoder.ts  stlEncoder.test.ts  stlEncoder.ts
src/workers/: colorLithoEngine.ts  combinationEngine.test.ts  meshWorker.ts  (+9 more)
(+20 files in other folders)
