[package]
name = "litho-engine-wasm"
version = "0.1.0"
edition = "2021"
description = "Lithophane mesh engine compiled to WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
